--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -53,6 +53,7 @@
         app:layout_constraintGuide_begin="326dp" />
 
     <TextView
+        android:id="@+id/txt_movie_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-black"
